fixed banner issues

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -50,7 +50,7 @@ RNVUseExoplayerDash=true
 RNVUseExoplayerHls=true
 RNVUseExoplayerRtsp=false
 
-MYAPP_UPLOAD_STORE_FILE=my-release-key.keystore
+MYAPP_UPLOAD_STORE_FILE=app/release-key.jks
 MYAPP_UPLOAD_KEY_ALIAS=release-key
 MYAPP_UPLOAD_STORE_PASSWORD=3uZ3@xD2t
 MYAPP_UPLOAD_KEY_PASSWORD=3uZ3@xD2t
