--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,6 +26,13 @@ android {
         multiDexEnabled true
     }
 
+    // Load signing properties from gradle.properties
+    def keystoreProps = new Properties()
+    def propsFile = rootProject.file("gradle.properties")
+    if (propsFile.exists()) {
+        keystoreProps.load(new FileInputStream(propsFile))
+    }
+
     signingConfigs {
         debug {
             storeFile file('debug.keystore')
@@ -34,10 +41,11 @@ android {
             keyPassword 'android'
         }
         release {
-            storeFile file('my-release-key.keystore')
-            storePassword '3uZ3@xD2t'
-            keyAlias 'release-key'
-            keyPassword '3uZ3@xD2t'
+            def storeFilePath = keystoreProps['MYAPP_UPLOAD_STORE_FILE'] ?: 'app/release-key.jks'
+            storeFile file(storeFilePath)
+            storePassword keystoreProps['MYAPP_UPLOAD_STORE_PASSWORD']
+            keyAlias keystoreProps['MYAPP_UPLOAD_KEY_ALIAS'] ?: 'release-key'
+            keyPassword keystoreProps['MYAPP_UPLOAD_KEY_PASSWORD']
         }
     }
 
@@ -50,9 +58,6 @@ android {
             minifyEnabled enableProguardInReleaseBuilds
             shrinkResources true
             proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
-            ndk {
-                abiFilters "arm64-v8a", "armeabi-v7a"
-            }
         }
     }
 }
