--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
     "react-native-share": "^10.2.1",
+    "react-native-svg": "^15.14.0",
     "react-native-vector-icons": "^10.3.0",
     "react-native-video": "^6.17.0",
     "react-native-view-shot": "^4.0.3",
