--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^14.0.0-rc.1",
+    "react-native-razorpay": "^2.3.1",
     "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
