--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -62,6 +62,11 @@ android {
     }
 }
 
+configurations.all {
+    exclude group: 'com.android.support', module: 'support-compat'
+    exclude group: 'com.android.support', module: 'support-v4'
+}
+
 dependencies {
     implementation("com.facebook.react:react-android")
     if (enableHermes) {
