--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@bam.tech/react-native-image-resizer": "^3.0.11",
-    "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-camera-roll/camera-roll": "^7.10.2",
     "@react-navigation/native": "^7.1.17",
@@ -28,6 +27,7 @@
     "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^14.0.0-rc.1",
+    "react-native-push-notification": "^8.1.1",
     "react-native-razorpay": "^2.3.1",
     "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "^5.6.1",
