--- a/ios/app/Info.plist
+++ b/ios/app/Info.plist
@@ -65,6 +65,7 @@
 		<string>LondrinaSolid-Regular.ttf</string>
 		<string>MontserratAlternates-Regular.ttf</string>
 		<string>Pacifico-Regular.ttf</string>
+		<string>Selima-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
