--- a/ios/link-assets-manifest.json
+++ b/ios/link-assets-manifest.json
@@ -28,6 +28,10 @@
     {
       "path": "assets/fonts/Pacifico-Regular.ttf",
       "sha1": "3d0b9eb17e645ac34f83c49c3f988372b242173a"
+    },
+    {
+      "path": "assets/fonts/Selima-Regular.ttf",
+      "sha1": "439f4eb4e03f83fecd70024eca2f8feb204002ec"
     }
   ]
 }
