--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -21,11 +21,15 @@ android {
         applicationId "com.codebinary.winter"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0.0"
+        versionCode 4
+        versionName "1.0.4"
         multiDexEnabled true
         buildConfigField("boolean", "IS_NEW_ARCHITECTURE_ENABLED", (findProperty("newArchEnabled") ?: "false").toString())
         buildConfigField("boolean", "IS_HERMES_ENABLED", (enableHermes).toString())
+
+        ndk {
+            abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
+        }
     }
 
     buildFeatures {
