--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Picstar",
-  "version": "1.1.0",
+  "version": "1.0.4",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -51,8 +51,8 @@
     "@react-native/babel-preset": "0.81.4",
     "@react-native/eslint-config": "0.81.4",
     "@react-native/metro-config": "0.81.4",
-    "@react-native/typescript-config": "0.81.4",
-    "@types/jest": "^29.5.13",
+    "@react-native/typescript-config": "^0.81.4",
+    "@types/jest": "^29.5.14",
     "@types/react": "^19.1.0",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
